@@ -1,3 +1,9 @@
+2008-08-12  Neal H. Walfield  <neal@gnu.org>
+
+	* storage.c (storage_low_mutex): Use
+	PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP, not
+	PTHREAD_MUTEX_RECURSIVE_INITIALIZER_NP.
+
 2008-07-08  Neal H. Walfield  <neal@gnu.org>
 
 	* as-lookup.c: Include <profile.h>, not "../viengoos/profile.h".
